tests/baselines/reference/parserAccessibilityAfterStatic1.errors.txt
parserAccessibilityAfterStatic1.ts(3,8): error TS1029: 'public' modifier must precede 'static' modifier.


==== parserAccessibilityAfterStatic1.ts (1 errors) ====
    class Outer
    {
    static public intI: number;
           ~~~~~~
!!! error TS1029: 'public' modifier must precede 'static' modifier.
    }
    